# tioj-judge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
include/tioj/: logger.h  paths.h  submission.h  tasks.h  utils.h
patches/: spdlog.patch  tioj_testlib.patch
src/: cpuset.cpp  cpuset.h  database.h  http_utils.cpp  http_utils.h  main.cpp  paths.cpp  server_io.cpp  server_io.h  websocket.h
src/tioj/: logger.cpp  paths.cpp  paths.h  sandbox.cpp  sandbox.h  sandbox_exec.cpp  sandbox_exec.h  submission.cpp  submission.h  tasks.cpp  utils.cpp  utils.h
test/: default_scoring_test.cpp  example_problem.cpp  example_problem.h  problem_type_test.cpp  setup.cpp  submission_test.cpp  utils.cpp  utils.h  verdict_test.cpp
tools/: default-scoring.cpp
